--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     <div class="col-xxl-8">
                         <div class="text-center my-5">
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
-                            <p class="lead fw-light mb-4">Hallo nama saya Ricky Edowai.</p>
+                            <p class="lead fw-light mb-4">Hay nama saya Ricky Edowai.</p>
                             <p class="text-muted">Selamat datang di website personal saya, tempat kreatif dan inovasi
                                 senang bertemu dengan anda untuk menciptakan sesuatu yang luar biasa, saya seorang
                                 student/pelajar di SaCode Papua.</p>
