--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
             <div class="container px-5">
-                <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Personal
-                        Web</span></a>
+                <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Jansen
+                        Faidiban</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span
@@ -52,15 +52,15 @@
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
                                 <div class="text-uppercase">Design &middot; Development &middot; Marketing</div>
                             </div>
-                            <div class="fs-3 fw-light text-muted">Saya dapat membantu bisnis Anda</div>
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Dapat online dan
-                                    berkembang dengan cepat</span></h1>
+                            <div class="fs-3 fw-light text-muted">Sa senang berkolaborasi dengan kam untuk</div>
+                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Pengembangan
+                                    Teknologi Informasi </span></h1>
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
-                                    href="resume.html">Resume</a>
-                                <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
-                                    href="projects.html">Projects</a>
+                                <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder" href="resume.html"><i
+                                        class="bi bi-linkedin fs-4 me-2"></i>Linkedln</a>
+                                <Projects class="btn btn-outline-dark btn-lg px-5 py-3 fs-5 fw-bolder"
+                                    href="projects.html"><i class="bi bi-github fs-4 me-2"></i> Git Hub</a>
                             </div>
                         </div>
                     </div>
