--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
             <div class="container px-5">
-                <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Personal Web</span></a>
+                <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Jansen
+                        Faidiban</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span
