--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span
                         class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </nav>
         <!-- Header-->
@@ -59,8 +59,11 @@
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder" href="resume.html"><i
                                         class="bi bi-linkedin fs-4 me-2"></i>Linkedln</a>
-                                <Projects class="btn btn-outline-dark btn-lg px-5 py-3 fs-5 fw-bolder"
-                                    href="projects.html"><i class="bi bi-github fs-4 me-2"></i> Git Hub</a>
+                                <a class="btn btn-outline-dark btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder"
+                                    href="https://github.com/rickyedowai/sacode-personal-web-001"><i
+                                        class="bi bi-github fs-4 me-2"></i>Git Hub</a>
+                                <!-- <Projects class="btn btn-outline-dark btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder"
+                                    href="projects.html"><i class="bi bi-github "></i> Git Hub</a> -->
                             </div>
                         </div>
                     </div>
@@ -362,7 +365,7 @@
             </div>
         </header>
         <!-- About Section-->
-        <section class="bg-light py-5">
+        <!-- <section class="bg-light py-5">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xxl-8">
@@ -384,25 +387,25 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
     <!-- Footer-->
-    <footer class="bg-white py-4 mt-auto">
-        <div class="container px-5">
-            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto">
-                    <div class="small m-0">Copyright &copy; Your Website 2023</div>
-                </div>
-                <div class="col-auto">
-                    <a class="small" href="#!">Privacy</a>
-                    <span class="mx-1">&middot;</span>
-                    <a class="small" href="#!">Terms</a>
-                    <span class="mx-1">&middot;</span>
-                    <a class="small" href="#!">Contact</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <!-- <footer class="bg-white py-4 mt-auto">
+                        <div class="container px-5">
+                            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                                <div class="col-auto">
+                                    <div class="small m-0">Copyright &copy; Your Website 2023</div>
+                                </div>
+                                <div class="col-auto">
+                                    <a class="small" href="#!">Privacy</a>
+                                    <span class="mx-1">&middot;</span>
+                                    <a class="small" href="#!">Terms</a>
+                                    <span class="mx-1">&middot;</span>
+                                    <a class="small" href="#!">Contact</a>
+                                </div>
+                            </div>
+                        </div>
+                    </footer> -->
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
