--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
                                     Teknologi Informasi </span></h1>
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder" href="resume.html"><i
-                                        class="bi bi-linkedin fs-4 me-2"></i>Linkedln</a>
+                                <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder"
+                                    href="https://www.linkedin.com/"><i class="bi bi-linkedin fs-4 me-2"></i>Linked
+                                    In</a>
                                 <a class="btn btn-outline-dark btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder"
-                                    href="https://github.com/rickyedowai/sacode-personal-web-001"><i
-                                        class="bi bi-github fs-4 me-2"></i>Git Hub</a>
+                                    href="https://github.com/rickyedowai"><i class="bi bi-github fs-4 me-2"></i>Git
+                                    Hub</a>
                                 <!-- <Projects class="btn btn-outline-dark btn-lg px-5 py-3 me-sm-3 fs-5 fw-bolder"
                                     href="projects.html"><i class="bi bi-github "></i> Git Hub</a> -->
                             </div>
